exports[`invalid(1): {\n\t\"name\": \"foo\",\n\t\"workspaces\": [\n\t\t\"packages/*\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"name": "foo",
  3 | 	"workspaces": [
  4 | 		"packages/*"
  5 | 	]
  6 | }

`;

exports[`invalid(1): {\n\t\"name\": \"foo\",\n\t\"workspaces\": [\n\t\t\"packages/*\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"name": "foo",
> 3 | 	"workspaces": [
    | 	^^^^^^^^^^^^ A package with \`workspaces\` should set \`"private": true\` to avoid accidentally publishing the workspace root.
  4 | 		"packages/*"
  5 | 	]
  6 | }

Suggestion 1/1: Set \`"private": true\`.:
  1 | {
  2 | 	"name": "foo",
  3 | 	"workspaces": [
  4 | 		"packages/*"
  5 | 	],
  6 | 	"private": true
  7 | }

`;

exports[`invalid(2): {\n\t\"name\": \"foo\",\n\t\"workspaces\": {\n\t\t\"packages\": [\n\t\t\t\"packages/*\"\n\t\t]\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"name": "foo",
  3 | 	"workspaces": {
  4 | 		"packages": [
  5 | 			"packages/*"
  6 | 		]
  7 | 	}
  8 | }

`;

exports[`invalid(2): {\n\t\"name\": \"foo\",\n\t\"workspaces\": {\n\t\t\"packages\": [\n\t\t\t\"packages/*\"\n\t\t]\n\t}\n} 2`] = `

Message:
  1 | {
  2 | 	"name": "foo",
> 3 | 	"workspaces": {
    | 	^^^^^^^^^^^^ A package with \`workspaces\` should set \`"private": true\` to avoid accidentally publishing the workspace root.
  4 | 		"packages": [
  5 | 			"packages/*"
  6 | 		]
  7 | 	}
  8 | }

Suggestion 1/1: Set \`"private": true\`.:
  1 | {
  2 | 	"name": "foo",
  3 | 	"workspaces": {
  4 | 		"packages": [
  5 | 			"packages/*"
  6 | 		]
  7 | 	},
  8 | 	"private": true
  9 | }

`;

exports[`invalid(3): {\n\t\"name\": \"foo\",\n\t\"private\": false,\n\t\"workspaces\": [\n\t\t\"packages/*\"\n\t]\n} 1`] = `

[Input]
  1 | {
  2 | 	"name": "foo",
  3 | 	"private": false,
  4 | 	"workspaces": [
  5 | 		"packages/*"
  6 | 	]
  7 | }

`;

exports[`invalid(3): {\n\t\"name\": \"foo\",\n\t\"private\": false,\n\t\"workspaces\": [\n\t\t\"packages/*\"\n\t]\n} 2`] = `

Message:
  1 | {
  2 | 	"name": "foo",
  3 | 	"private": false,
> 4 | 	"workspaces": [
    | 	^^^^^^^^^^^^ A package with \`workspaces\` should set \`"private": true\` to avoid accidentally publishing the workspace root.
  5 | 		"packages/*"
  6 | 	]
  7 | }

Suggestion 1/1: Set \`"private": true\`.:
  1 | {
  2 | 	"name": "foo",
  3 | 	"private": true,
  4 | 	"workspaces": [
  5 | 		"packages/*"
  6 | 	]
  7 | }

`;
